--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,10 @@
 
 
 	<link rel="stylesheet" type="text/css" href="./css/styles.css" />
+	<script type="text/javascript" src="./js/rest-client.js"></script>
 	<script type="text/javascript" src="./lib/jQuery/jquery.min.js"></script>
 	<script type="text/javascript" src="./lib/D3/d3.min.js"></script>
+	<script type="text/javascript" src="./js/apiconfig.js"></script>
 	<script type="text/javascript" src="./js/main.js"></script>
 </head>
 <body>
